tests/baselines/reference/declFileWithInternalModuleNameConflictsInExtendsClause2.errors.txt
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(1,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(1,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(5,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(5,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(5,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(5,14): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(10,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(10,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(10,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(10,14): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== declFileWithInternalModuleNameConflictsInExtendsClause2.ts (11 errors) ====
    module X.A.C {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
               ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface Z {
        }
    }
    module X.A.B.C {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
               ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                 ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class W implements A.C.Z { // This can refer to it as A.C.Z
        }
    }
    
    module X.A.B.C {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
               ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                 ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        namespace A {
        }
    }